[package]
name = "test-connector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pepechat = { path = "../../pepechat" }
tokio = { version = "1.17.0", features = ["rt", "net"] }
async-trait = "0.1.52"